# mali-v2

./: .gitignore  README.md  install.sh  mali  plan.md  pyproject.toml
bench/: beginner_1000.py  questions.py  run.py  stress_beginner.py  stress_beginner_report.json
data/: beginner_1000.jsonl  examples.jsonl
docs/: USAGE.md
harness/: __init__.py  cli.py  cmd_fixup.py  config.py  confirm.py  context.py  learned.py  loop.py  model.py  ollama_boot.py  prefs.py  prompt.py  quick_route.py  retrieve.py  safety.py  session.py  setup_menu.py  shell_input.py  tools.py  ui.py  vague.py
tests/: run_all.py  test_cmd_fixup.py  test_config.py  test_parse.py  test_probe.py  test_safety.py  test_tools.py  test_vague.py
